# QimenBot

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  README_EN.md  README_JA.md  pom.xml
.claude/commands/: plugin.md
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
apps/qimenbotd/: Cargo.toml
apps/qimenbotd/src/: main.rs
apps/qimenctl/: Cargo.toml
apps/qimenctl/src/: main.rs  onebot11_simulator.rs
config/: base.toml  dev.toml  plugin-state.toml  prod.toml
config/bots/: qq-backup.toml  qq-main.toml  qq-official.toml
config/plugins/: douluo.toml
crates/abi-stable-host-api/: Cargo.toml
crates/abi-stable-host-api/src/: lib.rs
crates/qimen-adapter-onebot11/: Cargo.toml
crates/qimen-adapter-onebot11/src/: lib.rs
crates/qimen-adapter-onebot12/: Cargo.toml
crates/qimen-adapter-onebot12/src/: lib.rs
crates/qimen-adapter-qqbot/: Cargo.toml
crates/qimen-adapter-qqbot/src/: lib.rs
crates/qimen-adapter-satori/: Cargo.toml
crates/qimen-adapter-satori/src/: lib.rs
crates/qimen-command-registry/: Cargo.toml
crates/qimen-command-registry/src/: lib.rs
crates/qimen-config/: Cargo.toml
crates/qimen-config/src/: lib.rs
crates/qimen-dynamic-plugin-derive/: Cargo.toml
crates/qimen-dynamic-plugin-derive/src/: lib.rs
crates/qimen-error/: Cargo.toml
crates/qimen-error/src/: lib.rs
crates/qimen-framework/: Cargo.toml  QUICKSTART.md
crates/qimen-framework/src/: lib.rs
crates/qimen-host-types/: Cargo.toml
crates/qimen-host-types/src/: lib.rs
crates/qimen-message/: Cargo.toml
crates/qimen-message/src/: cqcode.rs  keyboard.rs  lib.rs
crates/qimen-message/tests/: cqcode_integration.rs
crates/qimen-mod-admin/: Cargo.toml
crates/qimen-mod-admin/src/: lib.rs
crates/qimen-mod-bridge/: Cargo.toml
crates/qimen-mod-bridge/src/: lib.rs
crates/qimen-mod-command/: Cargo.toml
crates/qimen-mod-command/src/: lib.rs
crates/qimen-mod-scheduler/: Cargo.toml
crates/qimen-mod-scheduler/src/: lib.rs
crates/qimen-observability/: Cargo.toml
crates/qimen-observability/src/: lib.rs
crates/qimen-official-host/: Cargo.toml
crates/qimen-official-host/src/: lib.rs
crates/qimen-plugin-api/: Cargo.toml
crates/qimen-plugin-api/src/: lib.rs
crates/qimen-plugin-derive/: Cargo.toml
crates/qimen-plugin-derive/src/: lib.rs
crates/qimen-plugin-host/: Cargo.toml
crates/qimen-plugin-host/src/: lib.rs  plugin_manager.rs
crates/qimen-protocol-core/: Cargo.toml
crates/qimen-protocol-core/src/: event_dto.rs  lib.rs
crates/qimen-runtime/: Cargo.toml
crates/qimen-runtime/src/: command_dispatch.rs  dedup.rs  dynamic_runtime.rs  group_event_filter.rs  interceptor.rs  lib.rs  message_filter.rs  onebot11_dispatch.rs  permission.rs  plugin_acl.rs  proactive_send.rs  rate_limiter.rs  webhook_gateway.rs
crates/qimen-runtime/src/onebot11_dispatch/: message_sent_handler.rs  meta_handler.rs  notice_handler.rs  policy.rs  request_handler.rs
crates/qimen-runtime/tests/: dispatch_integration.rs  live_ws_integration.rs
crates/qimen-storage/: Cargo.toml
crates/qimen-storage/src/: lib.rs
crates/qimen-testkit/: Cargo.toml
crates/qimen-testkit/src/: lib.rs
crates/qimen-transport-core/: Cargo.toml
crates/qimen-transport-core/src/: lib.rs
crates/qimen-transport-http/: Cargo.toml
crates/qimen-transport-http/src/: lib.rs
crates/qimen-transport-qqbot/: Cargo.toml
crates/qimen-transport-qqbot/src/: lib.rs
crates/qimen-transport-ws/: Cargo.toml
crates/qimen-transport-ws/src/: lib.rs
crates/qimen-transport-ws/tests/: ws_integration.rs
docs/: DEVELOPMENT_MEMORY.md  changelog.md  index.md  package-lock.json  package.json
docs/.vitepress/: config.ts
docs/.vitepress/theme/: custom.css
docs/advanced/: deployment.md  dynamic-proactive-send-v04.md  dynamic-webhook-v05.md  runtime.md  transport.md
docs/api/: ffi-api.md  message-api.md  onebot-client.md  plugin-api.md  types.md
docs/guide/: architecture.md  configuration.md  event-flow.md  getting-started.md  introduction.md  qq-official-quickstart.md
docs/plugin/: commands.md  dynamic.md  events.md  interceptors.md  messages.md  overview.md  qq-official.md
plugins/qimen-dynamic-plugin-example/: Cargo.toml  README.md
plugins/qimen-dynamic-plugin-example/src/: lib.rs
plugins/qimen-plugin-example/: Cargo.toml  README.md
plugins/qimen-plugin-example/src/: basic.rs  event_demo.rs  interceptor_demo.rs  lib.rs  message_demo.rs
skills/: README.md  agents.md  claude-code.md  copilot-plugin.md  copilot.md  cursor.mdc  gemini.md  install.sh  kiro.md  plugin-dev.md  windsurf.md
src/main/java/com/mryunqi/qimenbot/: QimenBotApplication.java
src/main/java/com/mryunqi/qimenbot/Controller/: Function.java  User.java
src/main/java/com/mryunqi/qimenbot/Plugin/: DemoPlugin.java  Menu.java  SqlTest.java  UserState.java
src/main/java/com/mryunqi/qimenbot/Template/: UserStateTemplate.java
src/main/resources/: application.properties  application.yml  banner.txt
src/test/java/com/mryunqi/qimenbot/: QimenBotApplicationTests.java
templates/dynamic-plugin/: Cargo.toml  README.md
templates/dynamic-plugin/src/: lib.rs
