[package]
name = "abi-stable-host-api"
description = "ABI-stable FFI types for QimenBot dynamic plugins"
repository = "https://github.com/lvyunqi/QimenBot"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
abi_stable.workspace = true
