[package]
name = "qimen-adapter-onebot11"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
qimen-error = { path = "../qimen-error" }
qimen-message = { path = "../qimen-message" }
qimen-protocol-core = { path = "../qimen-protocol-core" }
serde_json.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
