[package]
name = "qimen-dynamic-plugin-derive"
description = "Proc macros for QimenBot dynamic plugin development"
repository = "https://github.com/lvyunqi/QimenBot"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
