[package]
name = "qimen-mod-admin"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
qimen-error = { path = "../qimen-error" }
qimen-plugin-api = { path = "../qimen-plugin-api" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
