[package]
name = "qimen-runtime"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
abi-stable-host-api = { path = "../abi-stable-host-api" }
abi_stable.workspace = true
async-trait.workspace = true
libloading = "0.7"
qimen-adapter-onebot11 = { path = "../qimen-adapter-onebot11" }
qimen-command-registry = { path = "../qimen-command-registry" }
qimen-config = { path = "../qimen-config" }
qimen-error = { path = "../qimen-error" }
qimen-message = { path = "../qimen-message" }
qimen-mod-command = { path = "../qimen-mod-command" }
qimen-host-types = { path = "../qimen-host-types" }
qimen-plugin-api = { path = "../qimen-plugin-api" }
qimen-protocol-core = { path = "../qimen-protocol-core" }
qimen-transport-ws = { path = "../qimen-transport-ws" }
regex = "1"
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
tracing.workspace = true
