[package]
name = "qimen-transport-http"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
qimen-error = { path = "../qimen-error" }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
