[package]
name = "qimen-transport-qqbot"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
qimen-error = { path = "../qimen-error" }
qimen-transport-ws = { path = "../qimen-transport-ws" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
