[package]
name = "qimen-transport-ws"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
qimen-error = { path = "../qimen-error" }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
webpki-roots = "0.26"

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "time"] }
