[package]
name = "qimen-dynamic-plugin-example"
edition = "2024"
version = "0.1.0"
rust-version = "1.89"

# 动态插件独立构建，不属于 QimenBot 主工作空间
# Dynamic plugins are built separately, not part of the main workspace
[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
abi-stable-host-api = "0.1"
abi_stable = "0.11"
serde_json = "1"
qimen-dynamic-plugin-derive = "0.1"
